fix extra width spacing

--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -9,7 +9,7 @@
   justify-content: flex-end;
   justify-self: flex-end;
   margin-top: 50px;
-  width: 100vw;
+  width: 100%;
 }
 
 .mailing-list-container {
@@ -99,7 +99,7 @@
 
 .info > h2 {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 .info > p {
