--- a/app/assets/stylesheets/greetings.css
+++ b/app/assets/stylesheets/greetings.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 5px 5px;
   margin-top: 10px;
-  width: 100%;
+  /* width: 100%; */
   height: 45px;
 }
 
@@ -15,6 +15,6 @@
   align-items: center;
   padding: 5px 5px;
   margin-top: 10px;
-  width: 100%;
+  /* width: 100%; */
   height: 45px;
 }
