--- a/app/assets/stylesheets/search_bar.css
+++ b/app/assets/stylesheets/search_bar.css
@@ -28,6 +28,8 @@
   background-color: rgb(244, 244, 244);
   height: 100%;
   font-size: 1.05rem;
+  border-color: #222222;
+  outline: none;
 }
 
 .search-button {
@@ -43,6 +45,7 @@
   width: 8%;
   background-color: rgb(244, 244, 244);
   height: 49px;
+  border-color: #222222;
 }
 
 .search-img {
@@ -84,12 +87,6 @@
   padding: 5px;
   width: 100%;
 }
-
-/* .search-results {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-} */
 
 .search-result-items {
   display: flex;
